hero styles and mobile nav

--- a/index.html
+++ b/index.html
@@ -21,16 +21,46 @@
       <header class="nav">
         <nav>
           <a href="#" class="nav__brand"
-            ><span>[ </span>bruno-santos<span> ]</span></a
+            ><span>{ </span>bruno-santos<span> }</span></a
           >
         </nav>
         <ul class="navMenu">
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#" class="nav__item">Projects</a></li>
+          <li><a href="#" class="cta">Contact</a></li>
         </ul>
 
-        <button>Menu</button>
+        <button>
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
       </header>
+
+      <section class="hero">
+        <div class="hero__text">
+          <strong>Frontend Developer</strong>
+          <h1>Bruno Santos</h1>
+          <p>
+            From the moment I produced <span>"Hello World"</span> in the console
+            of my first application, I knew I was hooked into the world of
+            programming.
+            <br />
+            <br />
+            From the start, I haven’t looked at the world of software
+            development as “just a job", as it has offered me an engaging
+            challenge to continually learn and improve my skills in creating
+            high-quallity experiences.
+          </p>
+          <button class="cta">Contact Me</button>
+        </div>
+        <div class="hero__illustration">
+          <img
+            src="/images/person-illustration.svg"
+            alt=""
+            aria-hidden="true"
+          />
+        </div>
+      </section>
     </div>
     <!-- End of main container -->
 
