Markup typo fix

--- a/index.html
+++ b/index.html
@@ -81,15 +81,14 @@
               Since the start, I haven’t looked at the world of software
               development as “just a job", as it has offered me an engaging
               challenge to continually learn and improve my skills in creating
-              high-quallity experiences. I'm a very, very goal oriented person
-              and
+              high-quallity experiences. I'm a very, very goal oriented person.
             </p>
 
             <p>
               I've found a level of job satisfaction as a developer that I
-              believe will sustain me over many years. I really want to work in
-              an environment where I am gaining experience with the technologies
-              I have learnt so far, as well as new tecnhologies that excite me.
+              believe will sustain me over many years. I want to work in an
+              environment where I am gaining experience with the technologies I
+              have learnt so far, as well as new tecnhologies that excite me.
             </p>
           </div>
         </section>
@@ -116,10 +115,10 @@
                   <li>Axios</li>
                 </ul>
                 <p>
-                  Devfinder is a page component build with ReactJS and Axios. It
-                  works as a search engine for profiles on GitHub, where the
-                  data is fetched directly from GitHub's API with the use of the
-                  Axios library. <br />
+                  Devfinder is a singe-page application build with ReactJS and
+                  Axios. It works as a search engine for profiles on GitHub,
+                  where the data is fetched directly from GitHub's public API
+                  with the use of the Axios library. <br />
                   The page also offers a light/dark theme toggle, built with
                   SCSS and React's Context API.
                 </p>
@@ -154,12 +153,12 @@
                   <li>Context API</li>
                 </ul>
                 <p>
-                  Solaris is a single-page application built with ReactJS and
-                  SCSS. <br />
-                  The page offers a navigation menu at the top, as well as
-                  sub-categories for each page where the data is fetched from a
-                  local JSON file and rendered onto the page with the use of
-                  React's Context API.
+                  Solaris is a single-page webpage built with ReactJS and SCSS.
+                  <br />
+                  The page offers a navigation menu for each planet, as well as
+                  sub-categories for each item. The data is fetched from a local
+                  JSON file and rendered onto the page with the use of React's
+                  Context API.
                 </p>
                 <div class="links">
                   <a
