--- a/index.html
+++ b/index.html
@@ -447,12 +447,17 @@
 
             <div class="skills__grid-item">
               <img src="images/skills/icon-react.svg" alt="React" />
-              <h3>ReactJS</h3>
+              <h3>React</h3>
             </div>
 
             <div class="skills__grid-item">
               <img src="images/skills/icon-nextjs.svg" alt="Next.js" />
-              <h3>NextJS</h3>
+              <h3>Next.js</h3>
+            </div>
+
+            <div class="skills__grid-item">
+              <img src="images/skills/icon-redux.svg" alt="Redux" />
+              <h3>Redux</h3>
             </div>
 
             <div class="skills__grid-item">
